--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 landon.guest.service.url=http://localhost:8100
+#This will allow our schema file to create the repository as opposed to allowing hibernate to do it,
+#which would then overwrite the data that we're then going to inject from our data dot SQL file.
+spring.hibernate.ddl-auto=none
